Bug 1630000 - Hitting Back sometimes shows old cached content, r=mayhemer,necko-reviewers

If we're racing cache with network and the network wins we don't have a cache entry for writing the downloaded data. In this case nsHttpChannel::MaybeCreateCacheEntryWhenRCWN() creates the entry synchronously by calling nsICacheStorage::openTruncate() before we initialize cache entry for writing.

Differential Revision: https://phabricator.services.mozilla.com/D74660